--- a/p/themes/Swage/swage.scss
+++ b/p/themes/Swage/swage.scss
@@ -185,6 +185,7 @@ form {
 
 
 @supports (scrollbar-width: thin) {
+	// scrollbar for the sliders (with blue/dark background color)
 	#sidebar,
 	.scrollbar-thin {
 		scrollbar-color: rgba(255, 255, 255, 0) rgba(255, 255, 255, 0);
@@ -195,9 +196,19 @@ form {
 	.scrollbar-thin:hover {
 		scrollbar-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.2);
 	}
+
+	// scrollbar for the sliders (with white background color)
+	#slider.scrollbar-thin {
+		scrollbar-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.05);
+	}
+
+	#slider.scrollbar-thin:hover {
+		scrollbar-color: rgba(0, 0, 0, 0.4) rgba(0, 0, 0, 0.1);
+	}
 }
 
 @supports not (scrollbar-width: thin) {
+	// scrollbar for the sliders (with blue/dark background color)
 	#sidebar::-webkit-scrollbar,
 	.scrollbar-thin::-webkit-scrollbar {
 		background: rgba(255, 255, 255, 0);
@@ -214,6 +225,19 @@ form {
 	#sidebar:hover::-webkit-scrollbar-thumb,
 	.scrollbar-thin::-webkit-scrollbar-thumb {
 		background: rgba(255, 255, 255, 0.5);
+	}
+
+	// scrollbar for the sliders (with white background color)
+	#slider.scrollbar-thin::-webkit-scrollbar {
+		background: rgba(0, 0, 0, 0.05);
+	}
+
+	#slider.scrollbar-thin::-webkit-scrollbar-thumb {
+		background: rgba(0, 0, 0, 0.1);
+	}
+
+	#slider.scrollbar-thin::-webkit-scrollbar-thumb {
+		background: rgba(0, 0, 0, 0.3);
 	}
 }
 
